PSD: Various bug fixes (#1219)
* PSD-1157 Fixing text overlapping images

* PSD-1198 Duplicate header on TS flow

* PSD-1180 Decapitalize emails

* PSD-913 Autocomplete has a blank entry

* Why_reporting missing page title

* Better error messages for product category and hazard type, using en file to give custom error messages

* Cookie banner crashing

--- a/psd-web/app/assets/application/stylesheets/images.scss
+++ b/psd-web/app/assets/application/stylesheets/images.scss
@@ -2,6 +2,7 @@
   background-color: govuk-colour("grey-1");
   display: inline-block;
   vertical-align: top;
+  max-width: 100%;
 }
 
 .image-without-preview {
